[workspace]
members = [
    "dll_loader",
    "hello_world",
    "remote_thread",
]
resolver = "3"

[workspace.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
